fixed overflowing text

--- a/src/pages/webshop/components/Checkout/ShippingInfo/ShippingInfo.scss
+++ b/src/pages/webshop/components/Checkout/ShippingInfo/ShippingInfo.scss
@@ -88,7 +88,6 @@
     button {
       @include button;
       width: 24%;
-      padding: 8px 21px;
       overflow: hidden;
       text-overflow: ellipsis;
     }
